--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,18 @@
+import com.android.builder.core.DefaultManifestParser
+
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion rootProject.compileSdkVersion
+    buildToolsVersion rootProject.buildToolsVersion
     defaultConfig {
-        applicationId "com.example.android.roomwordssample"
-        minSdkVersion 20
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        def manifestFile = (File) android.sourceSets.main.manifest.srcFile
+        def manifestParser = new DefaultManifestParser(manifestFile)
+        applicationId = manifestParser.getPackage()
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.targetSdkVersion
+        versionCode rootProject.versionCode
+        versionName rootProject.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,20 +24,30 @@ android {
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.1', {
+    implementation 'com.android.support:appcompat-v7:' + supportLibraryVersion
+    implementation 'com.android.support:design:' + supportLibraryVersion
+    testImplementation 'junit:junit:' + junitVersion
+    androidTestImplementation 'com.android.support.test:runner:' + androidTestVersion
+    androidTestImplementation 'com.android.support.test:rules:' + androidTestVersion
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:' + espressoVersion
+    androidTestImplementation ('android.arch.core:core-testing:' + archCoreVersion, {
+        exclude group: 'com.android.support', module: 'support-compat'
         exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
     })
+
+    androidTestImplementation 'org.mockito:mockito-android:' + mockitoVersion
 
     // Dependencies for working with Architecture components
     // You'll probably have to update the version numbers in guild.gradle (Project)
-    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
-    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
-    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
+    // architecture component
+    implementation 'android.arch.lifecycle:runtime:' + lifecycleVersion
+    implementation 'android.arch.lifecycle:extensions:' + lifecycleVersion
+    implementation 'android.arch.lifecycle:common-java8:' + lifecycleVersion
+    annotationProcessor 'android.arch.lifecycle:compiler:' + lifecycleVersion
 
-    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
+    implementation 'android.arch.persistence.room:runtime:' + roomVersion
+    implementation 'android.arch.persistence.room:rxjava2:' + roomVersion
+    implementation 'android.arch.persistence.room:testing:' + roomVersion
+    annotationProcessor 'android.arch.persistence.room:compiler:' + roomVersion
 }
