--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:' + ANDROID_GRADLE_VERSION
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,6 +27,30 @@ task clean(type: Delete) {
 }
 
 ext {
-    roomVersion = '1.0.0'
-    archLifecycleVersion = '1.0.0'
+    // app version
+    versionCode = 1
+    versionName = '0.0.1'
+
+    // Sdk and tools
+    minSdkVersion = 16 // jellybean
+    targetSdkVersion = 26
+    compileSdkVersion = 27
+    buildToolsVersion = '27.0.2'
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    supportLibraryVersion = '27.0.2'
+    constraintLayoutVersion = '1.0.2'
+
+    roomVersion = '1.1.0-alpha1'
+    lifecycleVersion = '1.1.0'
+    archCoreVersion = '1.1.0'
+    pagingVersion = '1.0.0-alpha5'
+
+    // Test Dependencies
+    junitVersion = '4.12'
+    mockitoVersion = '2.15.0'
+
+    androidTestVersion = '1.0.1'
+    espressoVersion = '3.0.1'
 }
