--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 import com.android.builder.core.DefaultManifestParser
 
 apply plugin: 'com.android.application'
+apply plugin: 'org.sonarqube'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -13,7 +14,7 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
         versionCode rootProject.versionCode
         versionName rootProject.versionName
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -50,4 +51,23 @@ dependencies {
     implementation 'android.arch.persistence.room:rxjava2:' + roomVersion
     implementation 'android.arch.persistence.room:testing:' + roomVersion
     annotationProcessor 'android.arch.persistence.room:compiler:' + roomVersion
+}
+
+sonarqube {
+    properties {
+        property 'sonar.sourceEncoding', 'UTF-8'
+        property 'sonar.language', 'java'
+
+        property 'sonar.host.url', 'http://localhost:9000' // Address of Sonar server
+        property 'sonar.sources', 'src/main' // Sources
+        property 'sonar.projectKey', "$project.name:$project.android.defaultConfig.versionName-$project.android.defaultConfig.versionCode"
+        property 'sonar.projectName', "$project.group:$project.android.defaultConfig.versionName-$project.android.defaultConfig.versionCode"
+        property 'sonar.projectDescription', "$project.group"
+        property 'sonar.projectVersion', "$project.android.defaultConfig.versionName-$project.android.defaultConfig.versionCode"
+        property 'sonar.projectBaseDir', "$project.projectDir"
+
+//        property 'sonar.exclusions', 'src/androidTest/java/**, src/androidTestMock/java/**, src/test/java/**'
+
+        property 'sonar.android.lint.report', 'build/outputs/lint-results.xml'
+    }
 }
